# tiktok-researcher

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py  settings.py
app/analysis/: audio.py  content_features.py  download.py  ffprobe.py  ocr.py  shots.py
app/api/routes/: briefs.py  health.py  jobs.py  seeds.py  stats.py  videos.py
app/api/schemas/: brief_schemas.py  job_schemas.py  metric_schemas.py  seed_schemas.py  token_schemas.py  video_schemas.py
app/cli/: commands.py
app/core/: brief_builder.py  ids.py  pattern_mining.py  scoring.py  storage.py
app/db/: models.py  session.py
app/db/migrations/: env.py  script.py.mako
app/db/migrations/versions/: 0001_init.py
app/monitoring/: telegram_notifier.py
app/providers/: apify_provider.py  base.py  csv_provider.py  tiktok_official_provider.py
app/scheduler/: scheduler_main.py
app/worker/: queue.py  tasks.py
tests/: conftest.py  test_api_endpoints.py  test_apify_provider.py  test_brief_builder.py  test_discover.py  test_e2e.py  test_regression.py  test_sanity.py  test_scoring.py  test_seed_import.py  test_worker_tasks.py
