[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viral-factory"
version = "0.1.0"
description = "TikTok viral content research backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2.7",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "rq>=1.16",
  "redis>=5.0",
  "apscheduler>=3.10",
  "python-multipart>=0.0.9",
  "python-dateutil>=2.9",
  "requests>=2.32",
  "httpx>=0.27",
  "numpy>=1.26",
  "yt-dlp>=2024.10"
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10", "respx>=0.21"]
